--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.15.0
   google_sign_in: ^6.1.4
   firebase_auth: ^4.7.1
+  provider: ^6.0.5
+  random_avatar: ^0.0.8
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,8 @@ flutter:
     - lib/assets/images/logo.png
     - lib/assets/images/seperator.png
     - lib/assets/images/google_logo.png
+    - lib/assets/images/add_birthday.png
+    - lib/assets/images/blob1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
