--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   provider: ^6.0.5
   random_avatar: ^0.0.8
   uuid: ^3.0.7
+  hive: ^2.2.3
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
