--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   build_runner: ^2.3.3
   hive_generator: ^2.0.0
   hive_flutter: ^1.1.0
+  flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,8 @@ flutter:
     - lib/assets/images/google_logo.png
     - lib/assets/images/add_birthday.png
     - lib/assets/images/blob1.png
+    - lib/assets/images/drawer_banner.jpg
+    - lib/assets/images/delete.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
