--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive_generator: ^2.0.0
   hive_flutter: ^1.1.0
   flutter_local_notifications: ^15.1.0+1
+  awesome_notifications: ^0.6.19
 
 dev_dependencies:
   flutter_test:
